[gd_scene load_steps=8 format=3 uid="uid://p7yjees04pkk"]

[ext_resource type="Script" uid="uid://2ene3ticpfdi" path="res://Scenes/GameFiles/Entities/Watcher.gd" id="1_iyq5i"]
[ext_resource type="Texture2D" uid="uid://l3cytverocat" path="res://Assets/Backgrounds/spooky-eyes.png" id="2_cxp71"]
[ext_resource type="PackedScene" uid="uid://r21rxt6g6sim" path="res://Scenes/Tools/Stopwatch.tscn" id="3_5c0wp"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5c0wp"]
height = 15.818
radius = 13.4712

[sub_resource type="Animation" id="Animation_5c0wp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Eyes:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cxp71"]
resource_name = "blink"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Eyes:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ltekq"]
_data = {
&"RESET": SubResource("Animation_5c0wp"),
&"blink": SubResource("Animation_cxp71")
}

[node name="Watcher" type="Node3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("1_iyq5i")
metadata/_custom_type_script = "uid://cvighqccn2p4p"

[node name="Eyes" type="Sprite3D" parent="."]
cast_shadow = 0
ignore_occlusion_culling = true
visibility_range_end = 500.0
texture = ExtResource("2_cxp71")

[node name="RayCast3D" type="RayCast3D" parent="Eyes"]
transform = Transform3D(33.82, 0, 0, 0, -1.47832e-06, -33.82, 0, 33.82, -1.47832e-06, 0, 0, 0)
collision_mask = 2
debug_shape_custom_color = Color(1, 0.545568, 0.969445, 1)

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_5c0wp")
debug_color = Color(0.87451, 0, 0.227451, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ltekq")
}

[node name="Stopwatch" parent="." instance=ExtResource("3_5c0wp")]

[node name="BlinkTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_player_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_player_exited"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink"]
